src/compiler/build_antlr/JSParser.py
# Generated from JS.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JSParser ( Parser ):

    grammarFileName = "JS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'let'", "'var'", "'for'", 
                     "'while'", "'do'", "'return'", "'function'", "'if'", 
                     "'else'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'+'", "'-'", "'='", "'*'", "'/'", "'%'", "'.'", "','", 
                     "';'", "'<'", "'>'", "'<='", "'>='", "'!='", "'=='", 
                     "'++'", "<INVALID>", "'--'", "'&&'", "'||'", "'!'", 
                     "'|'", "'&'", "'+='", "'-='", "'*='", "'/='", "'%='" ]

    symbolicNames = [ "<INVALID>", "CONST", "LET", "VAR", "FOR", "WHILE", 
                      "DO", "RETURN", "FUNCTION", "IF", "ELSE", "TRUE", 
                      "FALSE", "STRING", "ID", "INT", "L_ROUND", "R_ROUND", 
                      "L_FIGURE", "R_FIGURE", "L_SQUARE", "R_SQUARE", "PLUS", 
                      "MINUS", "ASSIGN", "MULTI", "DIV", "REM", "DOT", "COMMA", 
                      "SEMI", "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
                      "NOT_EQUAL", "EQUAL", "INCREMENT", "TERNAR", "DECREMENT", 
                      "LOG_AND", "LOG_OR", "LOG_NOT", "BIT_OR", "BIT_AND", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTI_ASSIGN", "DIV_ASSIGN", 
                      "REM_ASSIGN", "COM", "WS" ]

    RULE_program = 0
    RULE_function_declaration = 1
    RULE_statement = 2
    RULE_function_call = 3
    RULE_method_call = 4
    RULE_declaration = 5
    RULE_assign = 6
    RULE_expression = 7
    RULE_return_statement = 8
    RULE_for_loop = 9
    RULE_while_loop = 10
    RULE_instruction_if = 11
    RULE_instruction_elseif = 12
    RULE_instruction_else = 13
    RULE_for_start = 14
    RULE_condition = 15
    RULE_for_step = 16
    RULE_argument = 17
    RULE_array_element = 18
    RULE_object_property = 19
    RULE_array = 20
    RULE_array_value = 21
    RULE_string_literal = 22
    RULE_integer_literal = 23
    RULE_import_module = 24

    ruleNames =  [ "program", "function_declaration", "statement", "function_call", 
                   "method_call", "declaration", "assign", "expression", 
                   "return_statement", "for_loop", "while_loop", "instruction_if", 
                   "instruction_elseif", "instruction_else", "for_start", 
                   "condition", "for_step", "argument", "array_element", 
                   "object_property", "array", "array_value", "string_literal", 
                   "integer_literal", "import_module" ]

    EOF = Token.EOF
    CONST=1
    LET=2
    VAR=3
    FOR=4
    WHILE=5
    DO=6
    RETURN=7
    FUNCTION=8
    IF=9
    ELSE=10
    TRUE=11
    FALSE=12
    STRING=13
    ID=14
    INT=15
    L_ROUND=16
    R_ROUND=17
    L_FIGURE=18
    R_FIGURE=19
    L_SQUARE=20
    R_SQUARE=21
    PLUS=22
    MINUS=23
    ASSIGN=24
    MULTI=25
    DIV=26
    REM=27
    DOT=28
    COMMA=29
    SEMI=30
    LESS=31
    GREATER=32
    LESS_EQUAL=33
    GREATER_EQUAL=34
    NOT_EQUAL=35
    EQUAL=36
    INCREMENT=37
    TERNAR=38
    DECREMENT=39
    LOG_AND=40
    LOG_OR=41
    LOG_NOT=42
    BIT_OR=43
    BIT_AND=44
    PLUS_ASSIGN=45
    MINUS_ASSIGN=46
    MULTI_ASSIGN=47
    DIV_ASSIGN=48
    REM_ASSIGN=49
    COM=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.Import_moduleContext)
            else:
                return self.getTypedRuleContext(JSParser.Import_moduleContext,i)


        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(JSParser.Function_declarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.StatementContext)
            else:
                return self.getTypedRuleContext(JSParser.StatementContext,i)


        def getRuleIndex(self):
            return JSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR) | (1 << JSParser.FOR) | (1 << JSParser.WHILE) | (1 << JSParser.RETURN) | (1 << JSParser.FUNCTION) | (1 << JSParser.IF) | (1 << JSParser.TRUE) | (1 << JSParser.FALSE) | (1 << JSParser.STRING) | (1 << JSParser.ID) | (1 << JSParser.INT) | (1 << JSParser.L_ROUND))) != 0):
                self.state = 53
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.import_module()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.function_declaration()
                    pass

                elif la_ == 3:
                    self.state = 52
                    self.statement()
                    pass


                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(JSParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSParser.ID)
            else:
                return self.getToken(JSParser.ID, i)

        def L_ROUND(self):
            return self.getToken(JSParser.L_ROUND, 0)

        def R_ROUND(self):
            return self.getToken(JSParser.R_ROUND, 0)

        def L_FIGURE(self):
            return self.getToken(JSParser.L_FIGURE, 0)

        def R_FIGURE(self):
            return self.getToken(JSParser.R_FIGURE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.StatementContext)
            else:
                return self.getTypedRuleContext(JSParser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSParser.COMMA)
            else:
                return self.getToken(JSParser.COMMA, i)

        def getRuleIndex(self):
            return JSParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = JSParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(JSParser.FUNCTION)
            self.state = 59
            self.match(JSParser.ID)
            self.state = 60
            self.match(JSParser.L_ROUND)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JSParser.ID:
                self.state = 61
                self.match(JSParser.ID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSParser.COMMA:
                    self.state = 62
                    self.match(JSParser.COMMA)


                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(JSParser.R_ROUND)
            self.state = 71
            self.match(JSParser.L_FIGURE)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.statement()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR) | (1 << JSParser.FOR) | (1 << JSParser.WHILE) | (1 << JSParser.RETURN) | (1 << JSParser.IF) | (1 << JSParser.TRUE) | (1 << JSParser.FALSE) | (1 << JSParser.STRING) | (1 << JSParser.ID) | (1 << JSParser.INT) | (1 << JSParser.L_ROUND))) != 0)):
                    break

            self.state = 77
            self.match(JSParser.R_FIGURE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(JSParser.Function_callContext,0)


        def method_call(self):
            return self.getTypedRuleContext(JSParser.Method_callContext,0)


        def declaration(self):
            return self.getTypedRuleContext(JSParser.DeclarationContext,0)


        def assign(self):
            return self.getTypedRuleContext(JSParser.AssignContext,0)


        def expression(self):
            return self.getTypedRuleContext(JSParser.ExpressionContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(JSParser.Return_statementContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(JSParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(JSParser.While_loopContext,0)


        def instruction_if(self):
            return self.getTypedRuleContext(JSParser.Instruction_ifContext,0)


        def getRuleIndex(self):
            return JSParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = JSParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.function_call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.method_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.assign()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.expression(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.return_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.for_loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.while_loop()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.instruction_if()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JSParser.ID, 0)

        def L_ROUND(self):
            return self.getToken(JSParser.L_ROUND, 0)

        def R_ROUND(self):
            return self.getToken(JSParser.R_ROUND, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSParser.ExpressionContext,i)


        def SEMI(self):
            return self.getToken(JSParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSParser.COMMA)
            else:
                return self.getToken(JSParser.COMMA, i)

        def getRuleIndex(self):
            return JSParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = JSParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(JSParser.ID)
            self.state = 91
            self.match(JSParser.L_ROUND)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.TRUE) | (1 << JSParser.FALSE) | (1 << JSParser.STRING) | (1 << JSParser.ID) | (1 << JSParser.INT) | (1 << JSParser.L_ROUND))) != 0):
                self.state = 92
                self.expression(0)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSParser.COMMA:
                    self.state = 93
                    self.match(JSParser.COMMA)


                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(JSParser.R_ROUND)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 102
                self.match(JSParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Method_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSParser.ID)
            else:
                return self.getToken(JSParser.ID, i)

        def DOT(self):
            return self.getToken(JSParser.DOT, 0)

        def L_ROUND(self):
            return self.getToken(JSParser.L_ROUND, 0)

        def R_ROUND(self):
            return self.getToken(JSParser.R_ROUND, 0)

        def SEMI(self):
            return self.getToken(JSParser.SEMI, 0)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(JSParser.ArgumentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSParser.COMMA)
            else:
                return self.getToken(JSParser.COMMA, i)

        def getRuleIndex(self):
            return JSParser.RULE_method_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = JSParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(JSParser.ID)
            self.state = 106
            self.match(JSParser.DOT)
            self.state = 107
            self.match(JSParser.ID)
            self.state = 108
            self.match(JSParser.L_ROUND)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.TRUE) | (1 << JSParser.FALSE) | (1 << JSParser.STRING) | (1 << JSParser.ID) | (1 << JSParser.INT))) != 0):
                self.state = 109
                self.argument()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSParser.COMMA:
                    self.state = 110
                    self.match(JSParser.COMMA)


                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(JSParser.R_ROUND)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 119
                self.match(JSParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JSParser.ID, 0)

        def LET(self):
            return self.getToken(JSParser.LET, 0)

        def VAR(self):
            return self.getToken(JSParser.VAR, 0)

        def CONST(self):
            return self.getToken(JSParser.CONST, 0)

        def SEMI(self):
            return self.getToken(JSParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(JSParser.ASSIGN, 0)

        def function_call(self):
            return self.getTypedRuleContext(JSParser.Function_callContext,0)


        def expression(self):
            return self.getTypedRuleContext(JSParser.ExpressionContext,0)


        def array(self):
            return self.getTypedRuleContext(JSParser.ArrayContext,0)


        def getRuleIndex(self):
            return JSParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = JSParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.match(JSParser.ID)
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.match(JSParser.SEMI)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self.match(JSParser.ID)
                self.state = 129
                self.match(JSParser.ASSIGN)
                self.state = 130
                self.function_call()
                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 131
                    self.match(JSParser.SEMI)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 135
                self.match(JSParser.ID)
                self.state = 136
                self.match(JSParser.ASSIGN)
                self.state = 137
                self.expression(0)
                self.state = 139
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 138
                    self.match(JSParser.SEMI)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.CONST) | (1 << JSParser.LET) | (1 << JSParser.VAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 142
                self.match(JSParser.ID)
                self.state = 143
                self.match(JSParser.ASSIGN)
                self.state = 144
                self.array()
                self.state = 146
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 145
                    self.match(JSParser.SEMI)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(JSParser.ASSIGN, 0)

        def PLUS_ASSIGN(self):
            return self.getToken(JSParser.PLUS_ASSIGN, 0)

        def MINUS_ASSIGN(self):
            return self.getToken(JSParser.MINUS_ASSIGN, 0)

        def MULTI_ASSIGN(self):
            return self.getToken(JSParser.MULTI_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(JSParser.DIV_ASSIGN, 0)

        def REM_ASSIGN(self):
            return self.getToken(JSParser.REM_ASSIGN, 0)

        def ID(self):
            return self.getToken(JSParser.ID, 0)

        def array_element(self):
            return self.getTypedRuleContext(JSParser.Array_elementContext,0)


        def expression(self):
            return self.getTypedRuleContext(JSParser.ExpressionContext,0)


        def array(self):
            return self.getTypedRuleContext(JSParser.ArrayContext,0)


        def function_call(self):
            return self.getTypedRuleContext(JSParser.Function_callContext,0)


        def SEMI(self):
            return self.getToken(JSParser.SEMI, 0)

        def getRuleIndex(self):
            return JSParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = JSParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(JSParser.ID)
                pass

            elif la_ == 2:
                self.state = 151
                self.array_element()
                pass


            self.state = 154
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSParser.ASSIGN) | (1 << JSParser.PLUS_ASSIGN) | (1 << JSParser.MINUS_ASSIGN) | (1 << JSParser.MULTI_ASSIGN) | (1 << JSParser.DIV_ASSIGN) | (1 << JSParser.REM_ASSIGN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 155
                self.expression(0)
                pass

            elif la_ == 2:
                self.state = 156
                self.array()
                pass

            elif la_ == 3:
                self.state = 157
                self.function_call()
                pass


            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.state = 160
                self.match(JSParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operation = None # Token

        def L_ROUND(self):
            return self.getToken(JSParser.L_ROUND, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSParser.ExpressionContext,i)


        def R_ROUND(self):
            return self.getToken(JSParser.R_ROUND, 0)

        def argument(self):
            return self.getTypedRuleContext(JSParser.ArgumentContext,0)


        def MULTI(self):
            return self.getToken(JSParser.MULTI, 0)

        def DIV(self):
            return self.getToken(JSParser.DIV, 0)

        def PLUS(self):
            return self.getToken(JSParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(JSParser.MINUS, 0)

        def getRuleIndex(self):
            return JSParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)


